<resources>

    <string name="app_name">Motatawera</string>
    <string name="default_notification_channel_id">News</string>
    <string name="ruselt">Ruselt</string>

    <string name="chose_for_the_blew_item">Chose For The Blew Item</string>
    <string name="pdf">PDF</string>
    <string name="video">Video</string>
    <string name="show">Show</string>
    <string name="Login">Login</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo">logo</string>
    <string name="_2021_kmk_inc">© 2021 KMK Inc.</string>
    <string name="password">password</string>
    <string name="ID">ID</string>
    <string name="login">Login</string>
    <string name="hey_we_need_few_details_from_you_before_you_start_sharing_on_motatawera">Hey! We need few details from you before you start sharing on Motatawera</string>

    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="department">Department</string>
    <string name="level">Level</string>
    <string name="gender">Gender</string>
    <string name="subject">Subject</string>
    <string name="schedule">Schedule</string>
    <string name="change_password">Change Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="chose_language">Chose Language</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="post_fragment">Posts</string>
    <string name="chat_fragment">Chat</string>
    <string name="notification_fragment">Notifications</string>
    <string name="profile_fragment">Profile</string>
    <string name="setting_fragment">Settings</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="motatwera">Motatwera</string>
    <string name="_8m">8m</string>
    <string name="_2020_11_27_5_300_150_2020_11_19">متطورة_الهرم #_ تعلن إدارة المعهد عن تنظيم الحفل السنوى للخريجين وذلك يوم الجمعة الموافق 2020/11/27 الساعة الخامسة مساء بمدرج رقم 5 بالمعهد العالي للدراسات المتطورة بالهرم وقيمة الاشتراك للخريج 300 (ثلاثمائة جنيها) منها 150 (مائة وخمسون جنيها) تآمين ملابس الحفل تسترد بعد الحفل . آخر موعد للتسجيل يوم الخميس الموافق 2020/11/19 يسدد الاشتراك بمكتب رعاية الشباب بالمععد مع تمنياتنا للجميع بالنجاح والتوفيق وكل عام وأنتم بخير إدارة المعهد</string>
    <string name="_50">50</string>
    <string name="_20">20</string>
    <string name="_10">10</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="cominicate_with_a_hundred_of_students">Communicate with a Hundred of Students</string>
    <string name="can_t_login_reset_password">Can\'t Login Reset Password</string>
    <string name="makepost">What\'s on your mind?</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="changepasswordtitel">Change Password</string>
    <string name="motatawerasplashtitel">Motatawera</string>
    <string name="loading_quiz">Loading Quiz...</string>
    <string name="question">Question</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="next_question">Next Question</string>
    <string name="add_your_name_here">add your name here</string>
    <string name="add_your_phone_here">add your phone here</string>
    <string name="update_profile">Update Profile</string>
    <string name="branch">Branch</string>
    <string name="start">Start</string>
    <string name="youtube">Subject</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="no_pdf_avilable">NO PDF Available</string>
    <string name="pdf_available">PDF Available</string>
    <string name="no_video_vailable">NO Video Available</string>
    <string name="video_available">Video Available</string>
    <string name="no_data_found_check_soon_">No Data Found Check Soon....</string>
    <string name="no_data_added_till_now_check_soon">\"No Data Added till  now check soooon  \"</string>
    <string name="yes">YES</string>
    <string name="no_score_found">No Score found</string>
    <string name="email_is_required">Email is Required</string>
    <string name="invaild_emaill_address_email_must_be_yourname_company_com">Invaild Emaill address\nEmail must be yourName@company.com</string>
    <string name="password_not_equal_confirm_password">password not equal confirm password</string>
    <string name="name_is_requried">name is required</string>
    <string name="phone_is_requied">phone is required</string>
    <string name="invalid_phone_required">invalid phone required</string>
    <string name="data_added">DataAdded</string>
    <string name="no_internt">no internet</string>
    <string name="please_enter_your_old_password">pleas enter your old password!</string>
    <string name="please_enter_your_password">Pleas enter your password!</string>
    <string name="please_enter_your_confirm_password">Pleas enter your confirm password!</string>
    <string name="all_password_should_be_greater_than_6_char">all password should be greater than 6 char!</string>
    <string name="new_password_should_be_equal_confirm_new_password">new password should be equal confirm new password!</string>
    <string name="old_password_is_incorrect">old password is incorrect!</string>
    <string name="please_wait">Please wait..</string>
    <string name="password_update_successfully">password update successfully!</string>
    <string name="please_enter_your_id">pleas enter your id</string>
    <string name="User_name_or_password_incorrect">User Name Or Password incorrect</string>
    <string name="account_has_been_disable">Account has been disable</string>
    <string name="upload">\"upload \"</string>
    <string name="profile_update_successfully">profile update successfully!</string>
    <string name="sure_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">NO</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="time_out">\"Time out \"</string>
    <string name="load_firs_question">Load First Question</string>
    <string name="exam_finish">Exam finish</string>
    <string name="finish_exam">Finish Exam</string>
    <string name="password_must">Password must be at least 6 charcter</string>


    <string-array name="User_Type">
        <item>Admin</item>
        <item>Doctor</item>
        <item>Assistant</item>
        <item>MIS</item>
        <item>Business</item>
    </string-array>

    <string-array name="Student_lvl">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4 </item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="branch">
        <item>Haram</item>
        <item>Qtamia</item>
    </string-array>

    <string-array name="department">
        <item>Management Information System</item>
        <item>Business</item>
        <item>Accounting</item>
    </string-array>
</resources>