<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/nav_subject">

    <fragment
        android:id="@+id/nav_subject"
        android:name="com.kmk.motatawera.student.ui.fragment.SubjectFragment"
        android:label="@string/subject"
        tools:layout="@layout/fragment_subject" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.kmk.motatawera.student.ui.fragment.QuizFragment"
        android:label="@string/quiz"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.kmk.motatawera.student.ui.fragment.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.kmk.motatawera.student.ui.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>