<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainColor"
        tools:context=".ui.auth.LoginActivity">


        <TextView
            android:id="@+id/txtrememberpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:text="@string/can_t_login_reset_password"
            android:textColor="@color/MainRedColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/MainRedColor"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            app:errorEnabled="true"
            app:hintTextColor="@color/secondColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginenterance"
            app:startIconDrawable="@drawable/ic_baseline_perm_identity_24"
            app:startIconTint="@color/MainRedColor">

            <EditText
                android:id="@+id/etID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ID"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textColor="@color/secondColor"
                android:textColorHint="@color/secondColor"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/bg_botton_red"
            android:text="@string/Login"
            android:textColor="@color/white"
            app:backgroundTint="@color/MainRedColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_Password" />

        <TextView
            android:id="@+id/loginenterance"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/cominicate_with_a_hundred_of_students"
            android:textColor="@color/secondColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            app:errorEnabled="true"
            app:hintTextColor="@color/secondColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_ID"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/MainRedColor"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/MainRedColor">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/secondColor"
                android:textColorHint="@color/secondColor" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>