<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainColor"
        tools:context=".ui.auth.ChangePassActivity"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/secondColor"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/MainRedColor"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/MainRedColor">

            <EditText
                android:id="@+id/confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:layout_margin="15dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/secondColor"
                android:textColorHint="@color/secondColor" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:hintTextColor="@color/secondColor"

            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/MainRedColor"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/MainRedColor">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:layout_margin="15dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/secondColor"
                android:textColorHint="@color/secondColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressbar_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/secondColor"


            app:startIconDrawable="@drawable/ic_outline_person_24"
            app:startIconTint="@color/MainRedColor">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_margin="15dp"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/secondColor"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/MainRedColor">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_margin="15dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:hintEnabled="false"

            app:hintTextColor="@color/secondColor"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/MainRedColor">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/phone"
                android:layout_margin="15dp"
                android:inputType="phone"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_botton_red"
            android:text="@string/save"
            android:textColor="@color/white"
            app:backgroundTint="@color/MainRedColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
    </LinearLayout>

</layout>